--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="flex max-h-screen max-w-screen divide-x"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
