--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     ></script>
   </head>
   <body>
-    <div id="root" class="flex max-h-screen max-w-screen divide-x"></div>
+    <div
+      id="root"
+      class="flex max-h-screen max-w-screen divide-x overflow-hidden"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
